# aoc

./: .gitignore  README.md  bootstrap.py  plot_times.py  pyproject.toml  requirements.txt  template.cpp  template.py  tox.ini
.github/actions/: trigger_timer.sh  trigger_timer.yml
.github/workflows/: python.yml  trigger_timer.sh  trigger_timer.yml
2015/day1/: solve.py
2015/day2/: solve.py
2015/day3/: solve.py
2015/day4/: solve.py
2016/day1/: solve.py
2016/day2/: solve.py
2016/day3/: solve.py
2016/day4/: solve.py
2017/day1/: solve.py
2017/day2/: solve.py
2017/day3/: solve.py
2017/day4/: solve.py
2018/day1/: solve.py
2018/day2/: solve.py
2018/day3/: solve.py
2018/day4/: solve.py
2019/day1/: solve.py
2019/day2/: solve.py
2019/day3/: solve.py
2019/day4/: solve.py
2019/day5/: solve.py
2019/day6/: solve.py
2019/day7/: solve.py
2019/day8/: solve.py
2019/day9/: solve.py
2020/day1/: solutions.py  solve.cpp  solve.py
2020/day10/: solve.py
2020/day11/: solve.py
2020/day12/: solve.py
2020/day13/: solve.py
2020/day14/: solve.py
2020/day15/: solve.py
2020/day16/: solve.py
2020/day17/: solve.py
2020/day18/: solve.py
2020/day19/: solve.py
2020/day2/: solve.py
2020/day20/: input.txt  solve.py
2020/day21/: solve.py
2020/day22/: solve.py
2020/day23/: solve.py
2020/day24/: solve.py
2020/day25/: solve.py
2020/day3/: solve.py
2020/day4/: solve.py
2020/day5/: solve.py
2020/day6/: solve.py
2020/day7/: solve.py
2020/day8/: solve.py
scripts/: run_black_format.sh  run_clang_format.sh
(+4 files in other folders)
